2002-08-26  Darin Adler  <darin@apple.com>

        * khtml/rendering/render_list.cpp:
	Make file match the original KDE more closely (no substantive change).

2002-08-26  Richard Williamson  <rjw@apple.com>

        * WebCore.exp:

        Added WebCoreHistory
        
        * WebCore.pbproj/project.pbxproj:

        Added WebCoreHistory
        
        * kwq/KWQKHistoryProvider.mm:
        Use WebCoreHistory to determine visited link.
        
        * kwq/WebCoreHistory.h: Added.
        * kwq/WebCoreHistory.m: Added.
        
        Stage 1.  Use WebKit's WebHistory.  Writing
        of history and initialization still handled
        by Alex until stage 2.
        
        (+[WebCoreHistory setSharedHistory:]):
        (+[WebCoreHistory sharedHistory]):
        (-[WebCoreHistory containsURL:]):

        * kwq/KWQString.mm:
        (QString::compare):

        Optimization, use strcmp when both src and dst have valid ascii.
        

2002-08-26  David Hyatt  <hyatt@apple.com>

	- Patch drawText to understand right-aligned drawing.  
	- Fixed <ul> bullets so that they position properly.
	- Fixed bugs with horizontal and vertical positioning of
	  <ol> bullets.
	
        * khtml/rendering/render_list.cpp:
        (RenderListMarker::printObject):
        * kwq/KWQPainter.mm:
        (QPainter::drawText):

2002-08-24  Darin Adler  <darin@apple.com>

	- fixed 3032072 -- Crash on reload in DOM::DocumentImpl::~DocumentImpl [unified]()

	This was a tough one to debug.
	Turned out to be a subtle bug in our new QConstString implementation.

        * kwq/KWQString.mm:
        (QStringData::makeAscii): Don't invalidate the Unicode buffer unless the ASCII
	buffer is taking over the internal buffer from the Unicode. In other cases, it's
	important not to invalidate the Unicode because it can result in the Unicode being
	freed and re-created when unicode() is called, which is disastrous in the QConstString
	case because we can't free the Unicode.